[gd_scene load_steps=2 format=3 uid="uid://cpay0hjsvjj8l"]

[ext_resource type="Script" uid="uid://coaspaemrt1jl" path="res://scripts/block.gd" id="1_cgrg5"]

[node name="Block" type="Node2D"]
script = ExtResource("1_cgrg5")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 3

[node name="CollisionType1" type="CollisionPolygon2D" parent="Area2D"]
polygon = PackedVector2Array(15, -26.7, 15, -24.5, 2.2000008, -20.9, -2.4000015, -24, -8.700001, -24, -27, -10, -32.1, -8, -36.3, -8, -38.3, -3, -41.4, -3, -35, 8.400002, -35, 10.5, -17.2, 15, -14.700001, 15, -12, 17, -12, 19.400002, -3, 22.400002, -3, 24.099998, 16.099998, 23, 19.599998, 23, 26.599998, 18, 29, 18, 40, 3.7000008, 40, -6.799999, 25, -21.8, 25, -23.4)

[node name="CollisionType2" type="CollisionPolygon2D" parent="Area2D"]
polygon = PackedVector2Array(-1, -19.5, -1, -17.5, -2.2999992, -17, -7, -17, -18, -3, -20, -3, -20, 8.299999, -9, 13.200001, -9, 15, 17.199997, 15, 19, 11.5, 19, -1.5999985, 11, -13.599998, 11, -16.5)

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
